@@ -174,7 +174,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>${argLine} -Dfile.encoding=UTF-8 -Xmx64m</argLine>
+                    <argLine>@{argLine} -Dfile.encoding=UTF-8 -Xmx64m --add-opens java.base/java.lang.invoke=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
         </plugins>
